fetch data html added.

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
         <ol>
           <li><a href="slider.html" target="_blank">Slider</a></li>
           <li><a href="digital-clock.html" target="_blank">Digital Clock</a></li>
+          <li><a href="fetch-data.html" target="_blank">Fetch Data</a></li>
         </ol>
       </div>
     </div>
