--- a/digital-clock.html
+++ b/digital-clock.html
@@ -2,7 +2,11 @@
 <html>
 
 <head>
-
+    <meta charset="UTF-8" />
+    <meta name="description" content="" />
+    <meta name="keywords" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <title>Digital Clock</title>
     <style>
         h2 {
             text-align: center;
